--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 ---
 applications:
-  - name: spring-metrics-registrar
+  - name: spring-metrics-registrar-<EmployeeId> # Replace the application name to include a unique ID to meet Cloud Foundry's requirement for unique app names.
     buildpacks:
       - java_buildpack_offline
     memory: 1G
